---
source: compiler-core/src/javascript/tests/recursion.rs
expression: "\npub fn main(x) {\n  case x {\n    0 -> Nil\n    _ -> main(x - 1)\n  }\n}\n"
---
----- SOURCE CODE

pub fn main(x) {
  case x {
    0 -> Nil
    _ -> main(x - 1)
  }
}


----- COMPILED JAVASCRIPT
export function main(x) {
  while (true) {
    if (x === 0) {
      return undefined;
    } else {
      x = x - 1;
    }
  }
}
